minor css & language tweaks

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,31 @@
   height: 100px;
   padding: 20px;
   color: white;
-  margin-bottom: 40px;
+  padding-bottom: 40px;
 }
 
 .App-title {
   font-size: 1.5em;
+}
+
+.results {
+  padding-top: 30px;
+}
+
+.circle {
+  width: 30px;
+  height: 30px;
+  background-color: #222;
+  border-radius: 100%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.circle:hover {
+  cursor: default;
+}
+
+button:hover {
+  cursor: pointer;
 }
