--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   width: 30px;
   height: 30px;
   background-color: #222;
+  color: white;
   border-radius: 100%;
   margin: 0 auto;
   display: flex;
@@ -32,6 +33,48 @@
   cursor: default;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  background-color: rgba(0,0,0,0.4);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  max-height: 80%;
+  transform: translate(-50%, -50%);
+  padding: 30px;
+  background-color: white;
+  border-radius: 15px;
+  text-align: center;
+  z-index: 99;
+  overflow: auto;
+}
+
+button {
+  border-radius: 5px;
+}
+
 button:hover {
   cursor: pointer;
+  background-color: #222;
+  color: white;
+}
+
+.modalCloseButton {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  font-weight: bold;
+  background-color: #d3d3d3;
 }
