--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@font-face {
+  font-family: 'Brandon Grotesque';
+  src: url("./brandon.otf") format("opentype");
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Brandon Grotesque','brandon-grotesque',Helvetica,sans-serif;
+  font-family: 'Brandon Grotesque', Helvetica, sans-serif;
 }
